--- a/style.css
+++ b/style.css
@@ -20,6 +20,57 @@ body {
 
 /* NAV  */
 
+.nav {
+    position: fixed;
+    background-color: #222;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav ul {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav a {
+    color: #fff;
+    text-decoration: none;
+    padding: 7px 15px;
+    transition: all 0.3s ease-in-out;
+}
+
+.nav.active {
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.nav.active a {
+    color: #000;
+}
+
+.nav.active .container {
+    padding: 10px 0;
+}
+
+.nav a.current, .nav a:hover {
+    color: #c0392b;
+    font-weight: bold;
+}
+
+/* HERO */
+
 .hero {
   background-image: url("https://images.pexels.com/photos/450035/pexels-photo-450035.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
   background-repeat: no-repeat;
@@ -33,7 +84,7 @@ body {
   text-align: center;
   position: relative;
   margin-bottom: 20px;
-  /* behind overlay  */
+  /* position behind overlay  */
   z-index: -2;
 }
 
@@ -46,7 +97,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    /* in front of hero, but behind text */
+    /* position in front of hero, but behind text */
     z-index: -1;
 }
 
@@ -59,6 +110,8 @@ body {
     font-size: 20px;
     letter-spacing: 1px;
 }
+
+/* CONTENT */
 
 .content h2, .content h3{
     font-size: 150%;
